<resources>
    <string name="app_name">Phoneme Finance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_po">PO Vendor List</string>
    <string name="menu_invoice">Invoice</string>
    <string name="menu_generated_list">Generated List</string>
    <string name="menu_po_template">PO Template</string>
    <string name="menu_po_template_edit">PO Edit Template</string>
    <string name="menu_po_template_upload">Upload New Po</string>
    <string name="menu_invoive_add_upload">Add Invoice</string>
    <string name="menu_create_invoice">Create Invoice</string>
    <string name="menu_final_invoice">Final Invoice</string>
    <string name="menu_edit_vendor">Vendor Edit</string>
    <string name="menu_add_vendor">Vendor Add</string>
    <string name="menu_create_po">Create PO</string>
    <string name="menu_upload_payment">Upload New Payment</string>
    <string name="menu_invoice_management">Invoice Mangement</string>
    <string name="menu_create_new_po_template">Add New Po Template</string>
    <string name="menu_funnel_final_po_data">FunnelXpert</string>
    <string name="menu_client_list">Client List</string>
    <string name="menu_client_edit">Client Edit</string>
    <string name="menu_client_create">Client Create</string>
    <string name="menu_regionwise_revenue">Regionwise Revenue</string>
    <string name="menu_vendorwise_revenue">Vendorwise Revenue</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string-array name="company">
        <item>"Funnel expert UP"</item>
        <item>"Phoneme Noida"</item>
        <item>"Funnel Expert Delhi"</item>
        <item>"Phoneme Delhi"</item>
        <item>"Phoneme Gurgaon"</item>
    </string-array>
    <string-array name="vendor">
        <item>"Indian Agricultural Research Institute, (IARI)"</item>
        <item>"RP tech India"</item>
        <item>"Tech Data Advanced Solutions"</item>
        <item>"NARNOLI APPARELS PVT LTD"</item>
        <item>"AALACOM TECHNOLOGIES PRIVATE LIMITED"</item>

        <item>"Justwork Technologies Private Limited"</item>
        <item>"AB E Filling Pvt LTD"</item>
        <item>"Sejal Agarwal"</item>
        <item>"PS Kanodia"</item>
        <item>"Perfect Services"</item>

        <item>"WHO"</item>
        <item>"RED FOX Bhiwadi"</item>
        <item>"Gaurav Advant Helper"</item>
        <item>"Napolean Dang"</item>
        <item>"Mayur-Trainee"</item>
    </string-array>
    <string-array name="india_state">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
</resources>
