<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_invoice"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_invoice" />
        <item
            android:id="@+id/nav_po_vendor_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_po" />
        <item
            android:id="@+id/nav_po_generated_list"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_generated_list" />
        <item
            android:id="@+id/nav_po_template"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_po_template" />
        <item
            android:id="@+id/nav_po_template_edit"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_po_template_edit"
            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
