<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_invoice">


    <fragment
        android:id="@+id/nav_invoice"
        android:name="com.phoneme.poinvoice.ui.invoice.InvoiceFragment"
        android:label="@string/menu_invoice"
        tools:layout="@layout/fragment_invoice" />

    <fragment
        android:id="@+id/nav_po_vendor_list"
        android:name="com.phoneme.poinvoice.ui.po.VendorListFragment"
        android:label="@string/menu_po"
        tools:layout="@layout/fragment_vendorlist" />



    <fragment
        android:id="@+id/nav_po_generated_list"
        android:name="com.phoneme.poinvoice.ui.po.GeneratedListFragment"
        android:label="@string/menu_generated_list"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_po_template"
        android:name="com.phoneme.poinvoice.ui.po.POTemplateFragment"
        android:label="@string/menu_po_template"
        tools:layout="@layout/fragment_potemplate" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.phoneme.poinvoice.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.phoneme.poinvoice.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>